--- a/api/templates/emailtemplates/confirm-email.html
+++ b/api/templates/emailtemplates/confirm-email.html
@@ -231,7 +231,7 @@
                                             <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
                                                 <tr>
                                                     <td align="center" bgcolor="#2F67F6" role="presentation" style="border:none;border-radius:3px;color:#ffffff;cursor:auto;padding:15px 25px;" valign="middle">
-                                                        <p style="background:#2F67F6;color:#ffffff;font-family:'Helvetica Neue',Arial,sans-serif;font-size:15px;font-weight:normal;line-height:120%;Margin:0;text-decoration:none;text-transform:none;">
+                                                        <p style="background:#2F67F6;color:#ffffff;font-family:'Helvetica Neue',Arial,sans-serif;font-size:15px;font-weight:normal;line-height:120%;Margin:0;text-decoration:none;text-transform:none;" href="http://127.0.0.1:8000/api/v1/auth/activate">
                                                             Confirm Your Email
                                                         </p>
                                                     </td>
@@ -255,7 +255,7 @@
                                         <td align="center" style="font-size:0px;padding:10px 25px;padding-bottom:40px;word-break:break-word;">
 
                                             <div style="font-family:'Helvetica Neue',Arial,sans-serif;font-size:16px;line-height:22px;text-align:center;color:#555;">
-                                                <a href="https://www.htmlemailtemplates.net/free-html-emails-for-startups" style="color:#2F67F6">https://www.htmlemailtemplates.net/free-html-emails-for-startups</a>
+                                                <a href="http://127.0.0.1:8000/api/v1/auth/{{ id }}/activate/{{ token }}" style="color:#2F67F6">https://www.htmlemailtemplates.net/free-html-emails-for-startups</a>
                                             </div>
 
                                         </td>
